--- a/mservices/assets/css/contact.css
+++ b/mservices/assets/css/contact.css
@@ -3,12 +3,27 @@
 ======================================================= */
 
 #contact {
-    height: 500px;
+    height: 400px;
     background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/7.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+}
+
+#contact .contact-text {
+    text-align: center;
+    margin-top: 60px;
+    width: 100%;
+    color: #fff;
+}
+
+#contact .contact-text p {
+    margin-top: -25px;
+    width: 100%;
+    font-size: 18px;
+    color: #ddd;
+    line-height: 1.5rem;
 }
 
 #contact .contact-social {
@@ -26,26 +41,6 @@
 
 #contact .contact-social a:hover {
     color: var(--light-gray-color);
-}
-
-#contact .contact-text {
-    text-align: center;
-    margin-top: 100px;
-    width: 100%;
-    color: #fff;
-}
-
-#contact .contact-text p {
-    margin-top: -25px;
-    width: 100%;
-    font-size: 18px;
-    color: #ddd;
-    line-height: 1.5rem;
-}
-
-#contact .contact-text .btn {
-    margin-top: 15px;
-    text-decoration: none;
 }
 
 #contact .social {
@@ -225,80 +220,11 @@
 ======================================================= */
 
 #location {
-    padding-top: 60px;
-    padding-bottom: 120px;
-    background: linear-gradient(360deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/75.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-}
-
-#location h1 {
-    color: var(--light-color);
-    line-height: 1.5rem;
-    position: relative;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-}
-
-#location h1::before {
-    content: '';
-    position: absolute;
-    width: 100px;
-    height: 6px;
-    top: 1;
-    margin-left: 10px;
-    margin-top: 80px;
-    background: var(--danger-color);
-}
-
-#location h3 {
-    line-height: .6rem;
-    text-transform: uppercase;
-}
-
-#location .card {
-    padding: 20px 20px;
-    border-radius: 0px;
+    margin-bottom: -5px;
 }
 
 #location iframe {
     width: 100%;
     height: 450px;
     border: 0;
-}
-
-@media only screen and (max-width: 1060px) {
-    #location h1 {
-        font-size: 60px;
-    }
-    #location h1::before {
-        margin-left: 12px;
-        margin-top: 58px;
-    }
-}
-
-@media only screen and (max-width: 576px) {
-    #location .container {
-        padding: 0 25px;
-    }
-    #location h1 {
-        font-size: 30px;
-    }
-    #location h1::before {
-        height: 4px;
-        margin-left: 8px;
-        margin-top: 40px;
-    }
-}
-
-@media only screen and (max-width: 300px) {
-    #location h1 {
-        font-size: 25px;
-    }
-    #location h1::before {
-        margin-left: 6px;
-        margin-top: 38px;
-    }
 }
