--- a/mservices/assets/css/utilities.css
+++ b/mservices/assets/css/utilities.css
@@ -195,7 +195,7 @@
 }
 
 .btn:hover {
-    background: var(--redish-color);
+    background: var(--dark-color);
 }
 
 /* Backgrounds and colored buttons */
