--- a/mservices/assets/css/contact.css
+++ b/mservices/assets/css/contact.css
@@ -4,7 +4,7 @@
 
 #contact {
     height: 400px;
-    background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/7.jpg);
+    background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/74.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -135,7 +135,7 @@
 
 @media only screen and (max-width: 576px) {
     #contact {
-        height: 420px;
+        height: 370px;
     }
     #contact .contact-text {
         margin-top: 50px;
@@ -161,6 +161,118 @@
 /* ==== End Queries ==== */
 
 /* =======================================================
+# main | Contact Form
+======================================================= */
+
+#contact-form {
+    padding: 30px 0px 60px 0px;
+}
+
+#contact-form h1 {
+    line-height: 1.5rem;
+    position: relative;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+#contact-form h1::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 6px;
+    top: 1;
+    margin-left: 5px;
+    margin-top: 55px;
+    background: var(--danger-color);
+}
+
+#contact-form .contact-para {
+    font-size: 20px;
+    margin-top: 70px;
+}
+
+#contact-form form {
+    width: 95%;
+}
+
+#contact-form form .field {
+    margin-bottom: 15px;
+}
+
+#contact-form form .input-group {
+    width: 100%;
+}
+
+#contact-form form ::placeholder {
+    font-size: 16px;
+}
+
+#contact-form form input[type=text], #contact-form form input[type=email], #contact-form form textarea {
+    width: 100%;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    padding: 12px 0px 12px 24px;
+    font-size: 16px;
+    background: var(--light-gray-color);
+}
+
+#contact-form form .name, #contact-form form .multi-cross-fields {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2.0rem;
+}
+
+#contact-form form .btn-send {
+    transition: all .3s;
+    font-size: 16px;
+}
+
+#contact-form form .btn-send:hover {
+    cursor: pointer;
+}
+
+#contact-form .form-img {
+    margin-top: -100px;
+}
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width: 1060px) {
+    #contact-form .container {
+        padding: 0 60px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #contact-form .form-img {
+        margin-top: -20px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    #contact-form .container {
+        padding: 0 30px;
+    }
+    #contact-form h1 {
+        font-size: 25px;
+        margin-left: 1px;
+    }
+    #contact-form h1::before {
+        margin-left: 3px;
+        margin-top: 37px;
+    }
+    #contact-form .contact-para {
+        margin-top: 40px;
+    }
+    #contact-form form {
+        width: 100%;
+    }
+}
+
+/* ==== End Queries ==== */
+
+/* =======================================================
 # main | Contact Cards
 ======================================================= */
 
@@ -168,27 +280,27 @@
     padding: 60px 0;
 }
 
-#contact-cards .side-cards {
+#contact-cards .inner-cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: .3rem;
 }
 
-#contact-cards .side-cards .card {
+#contact-cards .inner-cards .card {
     padding: 20px 30px;
     border-radius: 0px;
     border-left: 5px solid var(--danger-color);
 }
 
-#contact-cards .side-cards .card h4 {
+#contact-cards .inner-cards .card h4 {
     font-size: 20px;
     letter-spacing: 2px;
     line-height: 0rem;
     text-transform: uppercase;
 }
 
-#contact-cards .side-cards .card p {
+#contact-cards .inner-cards .card p {
     margin-top: -10px;
     font-size: 17px;
 }
@@ -205,11 +317,19 @@
     #contact-cards .container {
         padding: 0 30px;
     }
-    #contact-cards .side-cards {
+    #contact-cards .inner-cards {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(1, 1fr);
         gap: .3rem;
+    }
+    #contact-cards h1 {
+        font-size: 30px;
+        margin-left: 16px;
+    }
+    #contact-cards h1::before {
+        margin-left: 5px;
+        margin-top: 45px;
     }
 }
 
