--- a/mservices/assets/css/services.css
+++ b/mservices/assets/css/services.css
@@ -135,7 +135,7 @@
 
 @media only screen and (max-width: 576px) {
     #services {
-        height: 420px;
+        height: 370px;
     }
     #services .services-text {
         margin-top: 50px;
@@ -193,22 +193,42 @@
     gap: .3rem;
 }
 
-#services-cards .side-cards .card {
-    border-radius: 0px;
+#services-cards .side-cards-2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    gap: .3rem;
 }
 
-#services-cards .side-cards .card-body {
+#services-cards .card {
+    transition: all 1s;
+}
+
+#services-cards .card:hover {
+    background: var(--danger-color);
+    color: var(--light-color);
+}
+
+#services-cards .card-img-top {
+    transition: all 1s;
+}
+
+#services-cards .card:hover .card-img-top {
+    transform: scale(1.2);
+}
+
+#services-cards .side-cards .card-body, #services-cards .side-cards-2 .card-body {
     padding: 5px 30px 20px 30px;
 }
 
-#services-cards .side-cards .card h4 {
+#services-cards .side-cards .card h4, #services-cards .side-cards-2 .card h4 {
     font-size: 20px;
     letter-spacing: 0px;
     line-height: 0rem;
     text-transform: capitalize;
 }
 
-#services-cards .side-cards .card p {
+#services-cards .side-cards .card p, #services-cards .side-cards-2.card p {
     margin-top: -7px;
     font-size: 17px;
 }
@@ -239,6 +259,20 @@
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(1, 1fr);
         gap: .3rem;
+    }
+    #services-cards .side-cards-2 {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        gap: .3rem;
+    }
+    #services-cards h1 {
+        font-size: 30px;
+        margin-left: 16px;
+    }
+    #services-cards h1::before {
+        margin-left: 5px;
+        margin-top: 45px;
     }
 }
 
