--- a/mservices/assets/css/projects.css
+++ b/mservices/assets/css/projects.css
@@ -171,6 +171,7 @@
 #projects-cards .row {
     overflow: hidden;
 }
+
 #projects-cards #commercial-row, #projects-cards #residential-row, #projects-cards #industrial-row {
     display: none;
 }
@@ -179,16 +180,50 @@
     animation: .5s zoomIn ease-in-out;
 }
 
+.zoom-out {
+    animation: .5s zoomOut ease-in-out;
+}
+
 @keyframes zoomIn {
     from {
-        /* transform: scale(0.9); */
+        /* transform: scale(0.8); */
+        position: relative;
         margin-right: -100%;
         /* transform: translateY(-10px); */
     }
     to {
         /* transform: scale(1.0); */
+        position: relative;
         margin-right: 0%;
         /* transform: translateY(0px); */
+    }
+}
+
+@keyframes slide-left-right {
+    0% {
+        position: relative;
+        left: -100%;
+    }
+    25% {
+        position: relative;
+        left: 0;
+    }
+    50% {
+        position: relative;
+        right: -100%;
+    }
+    100% {
+        position: relative;
+        right: 0;
+    }
+}
+
+@keyframes zoomOut {
+    from {
+        transform: scale(1.0);
+    }
+    to {
+        transform: scale(0.8);
     }
 }
 
@@ -223,6 +258,7 @@
 }
 
 #projects-cards .projects-links-sticky {
+    animation: faderIn .5s ease-in-out;
     position: fixed;
     top: 0;
     left: 0;
