--- a/mservices/assets/css/index.css
+++ b/mservices/assets/css/index.css
@@ -30,10 +30,10 @@
 
 #hero .social {
     position: fixed;
-    z-index: 10;
+    z-index: 5;
     margin-top: 200px;
     right: 0;
-    margin-right: 60px;
+    margin-right: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -512,7 +512,7 @@
 #commercial {
     height: 500px;
     position: relative;
-    z-index: 1030;
+    z-index: 10;
 }
 
 #commercial .prev-icon, #commercial .next-icon {
@@ -606,11 +606,11 @@
     #commercial .prev-icon {
         left: 130px;
     }
-    
     #commercial .next-icon {
         right: 130px;
     }
 }
+
 @media only screen and (max-width: 768px) {
     #commercial .prev-icon, #commercial .next-icon {
         display: none;
@@ -674,6 +674,18 @@
         margin-top: -25px;
         width: 100%;
         font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 415px) {
+    #commercial .commercial-text h1 {
+        font-size: 48px;
+    }
+}
+
+@media only screen and (max-width: 326px) {
+    #commercial .commercial-text h1 {
+        font-size: 40px;
     }
 }
 
@@ -821,6 +833,7 @@
     height: 90px;
     border-radius: 50%;
     z-index: 10;
+    filter: grayscale(100%);
 }
 
 #testimonials .rate-name {
