--- a/mservices/assets/css/main.css
+++ b/mservices/assets/css/main.css
@@ -142,7 +142,7 @@ html {
     }
     .navbar #check-btn {
         display: block;
-        margin-right: 20px;
+        margin-right: 18px;
         cursor: pointer;
     }
     .navbar .navbar-nav {
@@ -268,7 +268,7 @@ main {
 
 footer {
     position: relative;
-    z-index: 1030;
+    z-index: 5;
     padding-top: 60px;
     padding-bottom: 90px;
     background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/33.jpg);
@@ -369,6 +369,9 @@ footer .address p {
     footer .container {
         padding-left: 60px;
         padding-right: 60px;
+    }
+    footer .flex-space-between {
+        flex-flow: column wrap;
     }
     footer .social {
         margin-top: 20px;
